--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.27MB/s(Youtube:不良林), server: 120.233.186.250, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 120.233.186.59, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林), server: 185.167.117.171, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇨🇳 台湾-3.64MB/s(Youtube:不良林), server: 60.249.3.226, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.02MB/s(Youtube:不良林), server: 120.233.186.204, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: 120.233.186.250, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.08MB/s(Youtube:不良林), server: 60.249.3.126, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.74MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.50MB/s(Youtube:不良林), server: 103.56.62.145, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.21MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1016.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-850.7KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.19MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
@@ -66,20 +66,20 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
@@ -88,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
@@ -104,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
@@ -129,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-850.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
