--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.20MB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.25MB/s(Youtube:不良林), server: 116.129.253.134, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 117.50.106.86, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.20MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.99MB/s(Youtube:不良林), server: 120.233.186.59, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-362.0KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-5.00MB/s(Youtube:不良林), server: 60.249.3.227, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.23MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1016.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-953.9KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-635.5KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.19MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-953.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
