--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.20MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.99MB/s(Youtube:不良林), server: 120.233.186.59, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-362.0KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-5.00MB/s(Youtube:不良林), server: 60.249.3.227, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.23MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.59MB/s(Youtube:不良林), server: 103.56.62.145, port: 3382, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-10.59MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: 120.132.50.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.68MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1016.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-635.5KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.19MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
@@ -66,20 +66,20 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
@@ -88,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
@@ -104,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
@@ -129,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-635.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
